# revlogica-data-validation

./: Dockerfile  pyproject.toml
app/django_src/: asgi.py  settings.py  urls.py  wsgi.py
